cabal-version: 2.1
name: maybe-when
version: 0.1
synopsis: 'Bool'-indexed hybrid between 'Maybe' and 'Identity'
license: BSD-3-Clause
license-file: LICENSE
extra-source-files:
  ChangeLog.md
author: Vladislav Zavialov
maintainer: Monadfix <hi@monadfix.com>
category: Data
build-type: Simple

homepage: https://github.com/monadfix/maybe-when
bug-reports: https://github.com/monadfix/maybe-when/issues

source-repository head
  type: git
  location: git://github.com/monadfix/maybe-when.git

library
  exposed-modules:
    Data.MaybeWhen
  build-depends:
    base < 5
  hs-source-dirs:
    lib
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
